     a LPVOID pParams parameter.
   - The thread is now created using the CreateThread member function rather
     than being automatically created in the constructor. This provides more
	 control over if and when the thread is created.
* Updated CWinApp
   - CWinApp now inherits from CWinThread. Some member functions were moved
     to CWinThread.
   - Added wrapper functions for loading and setting the cursor, and loading 
	 icons.	   
* Updated CFrame
   - A keyboard hook is used to retrieve keyboard indicators (NUM, CAPS, SCRL),
     removing the need for a timer. 
   - If the co-ordinates retrieved from registry would place the frame off
     screen, the frame is repositioned.
   - Added GetTitle, SetTitle, GetStatusText and SetStatusText functions.	  
* Updated CDocker and CTab
   - CTabs and CDockers now support the WS_EX_LAYOUTRTL extended style. This
     style creates a window whose horizontal origin is on the right edge to 
	 better suite Arabic and Hebrew languages.
* Updated FromHandle for CWnd, CDC, CBitmap, CBrush, CFont, CPalette, CPen, CRgn, 
   CImageList and CMenu. They have been moved from global to their classes.
* CWnd::FromHandlePernament has been added to retrieve a known CWnd for a HWND.
   Unlike CWnd::FromHandle, this function never creates a new CWnd. It returns
   NULL if the window handle is not found in the map of permanent CWnds.
* The framework now takes a stricter approach to casting. For the most part,
   c-style casts have been replaced with C++ style casts. Any down-casts from
   CWnd to a CWnd derived type (e.g. CWnds from FromHandle) are asserted with
   dynamic_cast to ensure they are correct.   
* The framework no longer uses OnIdle internally. OnIdle is still supported,
   but users might want to consider using worker threads instead.  

Incompatibilities with previous version
---------------------------------------
* The various FromHandle functions are no longer global. For example, we now 